--- a/workinprogress.html
+++ b/workinprogress.html
@@ -13,18 +13,26 @@
               INSERT INTO Photo VALUES (0000002, 123, '2019-01-12 19:30:20', "/Users/rebeccafisch/Desktop/TestImages/testfirst123.jpg", "this is a cat", TRUE)
               ––>
             {% for image in images %} 
-                <h3>Image below by: {{ image.photoOwner }} </h3>
+                <h3>Image below by: {{ image.photoOwner  }}</h3>
                 <img src="/image/{{image.filePath}}" width="300"/>
-                
                 <p> photoID: {{ image.photoID }} <br> caption: {{ image.caption }}
                 <br> timestamp: {{ image.timestamp }} 
                 <br> people tagged: 
-                 {% for post in posts %} 
+                <!-- {% for post in posts %} 
                    First name: {{post.fname}} Last name: {{post.lname}} <br>
-                 {% endfor %}
+                 {% endfor %}-->
             </p>
             {% endfor %}
         </div>
         <a href="/">Go back</a>
     </body>
 </html>
+
+SELECT Photo.photoID, timestamp, filePath, photoOwner, caption 
+FROM Photo, Belong, Share
+Where belong.username = '123' and belong.groupOwner = share.groupOwner AND Belong.groupName = share.groupName
+UNION 
+SELECT Photo.photoID, timestamp, filePath, photoOwner, caption 
+FROM Photo, Follow  
+WHERE (photoOwner = '123' ) or (followerUsername = '123' AND photoOwner = followeeUsername AND acceptedfollow = TRUE)
+ORDER BY Timestamp DESC
